[package]
name = "moonraker-cli"
version = "0.1.0"
authors = ["Emiliano Bovetti <emiliano.bovetti@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.11", features = ["v4", "serde"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
futures = "0.3.30"
